--- a/TD/Partie_1/TD1/sujet/sujet.html
+++ b/TD/Partie_1/TD1/sujet/sujet.html
@@ -422,7 +422,7 @@ Recompiler et exécuter <br>
 
 
 
-<!--Faire un &quot;ls -l core&quot; : regarder la taille du fichier core. <BR>
+Faire un &quot;ls -l core&quot; : regarder la taille du fichier core. <BR>
 
 D&eacute;truire le fichier core (il faut <B>toujours</B> d&eacute;truire
 
@@ -432,7 +432,6 @@ les &quot;core&quot; qui trainent). <BR>
 
 </UL>
 
--->
 
 <p>
 
