--- a/TD/Partie_1/TD2/sujet/sujet.html
+++ b/TD/Partie_1/TD2/sujet/sujet.html
@@ -162,7 +162,6 @@ Récupérer les déclarations des données suivantes
   Dans la fonction <i>main </i>tester les fonctions ci-dessus.<br>
   </p>
 <hr width="800" align="left">
-<!--
 <p>    <b><font color="005599">Exercice 5 : structures et tableaux: Fichier
   ex5.c</font><br>
     </b>D&eacute;clarer la structure <i>Etudiant </i>qui contient les champs
@@ -180,7 +179,7 @@ Récupérer les déclarations des données suivantes
     Ecrire la fonction <i><font color="#CC6600">Afficher_Etudiant()</font></i> dont le prototype est : &nbsp;<i><font color="#CC6600">void
       Afficher_Etudiant(struct Etudiant)</font></i><br>
   </p>
-<p>    Dans la fonction <i>main </i>tester les fonctions ci-dessus.<br> -->
+<p>    Dans la fonction <i>main </i>tester les fonctions ci-dessus.<br>
 <p></p>
 
 </div>
